apps/grafana/grafana-https-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: grafana-https-route
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostSNIRegexp(`grafana.{domain:[a-z\.]+}`)
      services:
        - name: grafana-service
          port: 3000
  tls:
    secretName: grafana-server-tls
