apps/grafana/grafana-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-route
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: HostRegexp(`grafana.{domain:[a-z\.]+}`)
      services:
        - name: grafana-service
          port: 3000
  tls:
    secretName: grafana-route-tls
